--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Chores</title>
+    <link rel="icon" href="/favicon.ico">
+
+    <script src="/config.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="app"></div>
