--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 
     <title>Chores</title>
     <link rel="icon" href="/favicon.ico">
+    <link id="theme-css" rel="stylesheet" type="text/css" href="/themes/lara-light-indigo/theme.css">
 
     <script src="/config.js" type="text/javascript"></script>
   </head>
