remove sakai, set up new primevue, remove auth

--- a/client/index.html
+++ b/client/index.html
@@ -6,9 +6,15 @@
 
     <title>Chores</title>
     <link rel="icon" href="/favicon.ico">
-    <link id="theme-css" rel="stylesheet" type="text/css" href="/themes/lara-light-indigo/theme.css">
 
     <script src="/config.js" type="text/javascript"></script>
+
+    <link
+      rel="preload"
+      as="font"
+      href="/fonts/lato-v24-latin-regular.woff2"
+      type="font/woff2"
+      crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
